Refactor: Separate HTML/CSS from Python code
- Extract embedded HTML to Jinja2 templates in templates/ directory
- Move inline CSS to external stylesheet in static/css/style.css
- Update FastAPI routes to use templates.TemplateResponse()
- Maintain all existing functionality while improving code organization
- Add generated files (CSV, charts) to .gitignore
- Follow separation of concerns and web development best practices

--- a/.gitignore
+++ b/.gitignore
@@ -57,4 +57,11 @@ config.local.py
 
 # Temporary files
 *.tmp
-*.temp 
+*.temp
+
+# Generated data files
+weather_data.csv
+
+# Generated chart images
+static/charts/*.png
+output.png 
