--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ matplotlib==3.8.2
 seaborn==0.13.0
 fastapi==0.105.0
 uvicorn[standard]==0.25.0
+gunicorn==21.2.0
 python-multipart==0.0.6
 python-dotenv==1.0.0
 aiofiles==23.2.1
