🔧 Fix Python 3.13 compatibility and compilation errors
✅ **MAJOR FIXES for Render deployment:**

- Update pandas 2.2.0 → 2.2.3 (first version with full Python 3.13 support)
- Add numpy<2.0.0 constraint for stability
- Force binary-only installation: pip install --only-binary=all
- Add PIP_ONLY_BINARY and PIP_NO_COMPILE environment variables
- Update Python runtime to 3.11.10
- Create check_environment.py for deployment verification
- Update RENDER_DEPLOY.md with comprehensive troubleshooting

🚫 **Eliminates compilation errors:**
- No more pandas Cython compilation failures
- No more C++ standard attributes errors
- Forces use of pre-built wheels only

🚀 **Ready for immediate Render deploymentadd .*

--- a/render.yaml
+++ b/render.yaml
@@ -3,11 +3,15 @@ services:
     name: singular-weather
     env: python
     repo: https://github.com/your-username/singular.git  # Update this to your actual repo URL
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install --only-binary=all -r requirements.txt
     startCommand: gunicorn app:app -w 4 -k uvicorn.workers.UvicornWorker --host 0.0.0.0 --port $PORT
     plan: free
     envVars:
       - key: PORT
         value: 10000
       - key: PYTHON_VERSION
-        value: 3.11.9 
+        value: 3.11.10
+      - key: PIP_ONLY_BINARY
+        value: ":all:"
+      - key: PIP_NO_COMPILE
+        value: "1" 
