--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     repo: https://github.com/your-username/singular.git  # Update this to your actual repo URL
     buildCommand: pip install --only-binary=all -r requirements.txt
-    startCommand: gunicorn app:app -w 4 -k uvicorn.workers.UvicornWorker --host 0.0.0.0 --port $PORT
+    startCommand: gunicorn app:app --workers 4 --worker-class uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT
     plan: free
     envVars:
       - key: PORT
